<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:background="@drawable/background">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/belarus"
        android:textSize="30dp"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        android:textColor="@color/white"
        android:textStyle="bold"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/authorization"
        android:textSize="32dp"
        android:layout_gravity="center"
        android:layout_marginTop="100dp"
        android:textColor="@color/white"
        android:textStyle="italic"/>

    <EditText
        android:background="@drawable/editback"
        android:id="@+id/log"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textStyle="bold"
        android:layout_marginTop="31dp"
        android:hint="@string/login"
        android:textColorHint="@color/white"
        android:textColor="@color/black"
        android:paddingLeft="10dp"/>
    <EditText
        android:id="@+id/pass"
        android:layout_width="280dp"
        android:background="@drawable/editback"
        android:textColorHint="@color/white"
        android:textColor="@color/black"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textStyle="bold"
        android:inputType="textPassword"
        android:layout_marginTop="20dp"
        android:hint="@string/password"
        android:paddingLeft="10dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/select"
        android:textSize="24dp"
        android:layout_marginLeft="70dp"
        android:layout_marginTop="20dp"
        android:textColor="@color/white"
        android:textStyle="italic"/>
    <Spinner
        android:id="@+id/menu"
        android:background="@drawable/editback"
        android:textColorHint="@color/white"
        android:textColor="@color/black"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:entries="@array/mode"/>
    <Button
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:background="@drawable/button"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:layout_marginRight="100dp"
        android:text="@string/vhod"
        android:textColor="@color/white"
        android:textSize="16dp"
        android:textStyle="italic"
        android:textAllCaps="false"
        android:onClick="vhod"/>
    <Button
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:background="@drawable/button"
        android:layout_gravity="center"
        android:textColor="@color/white"
        android:text="@string/registr"
        android:textSize="16dp"
        android:layout_marginLeft="70dp"
        android:layout_marginTop="-48dp"
        android:textStyle="italic"
        android:textAllCaps="false"
        android:onClick="registr"/>

</LinearLayout>