<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainMenu"
    android:orientation="vertical"
    android:background="@drawable/background">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/belarus"
        android:textSize="30dp"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        android:textColor="@color/white"
        android:textStyle="bold"/>

    <Button
        android:id="@+id/buttonMinistry"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:text="@string/ministry"
        android:textAllCaps="false"
        android:textSize="25dp"
        android:textColor="@color/white"
        android:textStyle="italic"
        android:background="@drawable/button"/>

    <Button
        android:id="@+id/buttonTeacher"
        android:layout_width="match_parent"
        android:textAllCaps="false"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/teacher"
        android:textSize="25dp"
        android:textColor="@color/white"
        android:textStyle="italic"
        android:background="@drawable/button"/>

    <Button
        android:id="@+id/buttonStudent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/student"
        android:textAllCaps="false"
        android:textSize="25dp"
        android:textColor="@color/white"
        android:textStyle="italic"
        android:background="@drawable/button" />


</LinearLayout>