<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddTeacher"
    android:background="@drawable/background"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/addData"
        android:textSize="24dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:textColor="@color/white"
        android:textStyle="bold"/>
    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/back"
        android:layout_marginTop="-40dp"
        android:onClick="back"
        style="@style/Widget.AppCompat.ActionButton.Overflow"/>
    <EditText
        android:id="@+id/name"
        android:background="@drawable/editback"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="18dp"
        android:hint="@string/fio"
        android:layout_marginTop="150dp"
        android:layout_marginBottom="10dp"
        android:paddingLeft="10dp"
        android:textColorHint="@color/white"
        android:textColor="@color/black"/>
    <Spinner
        android:background="@drawable/editback"
        android:id="@+id/spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />
    <EditText
        android:background="@drawable/editback"
        android:id="@+id/speciality"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="18dp"
        android:hint="@string/speciality"
        android:layout_marginTop="20dp"
        android:paddingLeft="10dp"
        android:textColorHint="@color/white"
        android:textColor="@color/black"/>
    <EditText
        android:background="@drawable/editback"
        android:id="@+id/salary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="18dp"
        android:hint="@string/salary"
        android:layout_marginTop="20dp"
        android:paddingLeft="10dp"
        android:textColorHint="@color/white"
        android:textColor="@color/black"
        android:inputType="numberDecimal"/>
    <EditText
        android:id="@+id/hours"
        android:background="@drawable/editback"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="18dp"
        android:hint="@string/hours"
        android:layout_marginTop="20dp"
        android:paddingLeft="10dp"
        android:textColorHint="@color/white"
        android:textColor="@color/black"
        android:inputType="number"/>
    <Button
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:layout_gravity="center_horizontal"
        android:gravity="center"
        android:layout_marginTop="30dp"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textStyle="italic"
        android:textSize="26dp"
        android:text="@string/addteacher"
        android:background="@drawable/button"
        android:onClick="addteacher"/>

</LinearLayout>