<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddUniversity"
    android:orientation="vertical"
    android:background="@drawable/background">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/addData"
        android:textSize="24dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:textColor="@color/white"
        android:textStyle="bold"/>
    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/back"
        android:layout_marginTop="-40dp"
        android:onClick="back"
        style="@style/Widget.AppCompat.ActionButton.Overflow"/>
    <EditText
        android:background="@drawable/editback"
        android:id="@+id/name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="18dp"
        android:hint="@string/nameuniv"
        android:layout_marginTop="200dp"
        android:paddingLeft="10dp"
        android:textColorHint="@color/white"
        android:textColor="@color/black"/>
    <EditText
        android:background="@drawable/editback"
        android:id="@+id/web"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="18dp"
        android:hint="@string/website"
        android:layout_marginTop="20dp"
        android:paddingLeft="10dp"
        android:textColorHint="@color/white"
        android:textColor="@color/black"/>
    <EditText
        android:background="@drawable/editback"
        android:id="@+id/urlphoto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="18dp"
        android:hint="@string/url"
        android:layout_marginTop="20dp"
        android:paddingLeft="10dp"
        android:textColorHint="@color/white"
        android:textColor="@color/black"/>
    <Button
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:layout_gravity="center_horizontal"
        android:gravity="center"
        android:layout_marginTop="30dp"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textStyle="italic"
        android:textSize="26dp"
        android:text="@string/adduniv"
        android:background="@drawable/button"
        android:onClick="adduniv"/>


</LinearLayout>